[project]
name = "uidai_py"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Arun Khattri", email = "arunkhattri@outlook.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3-or-later"}


[tool.pdm]
distribution = false
